--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -10420,7 +10420,7 @@ a:focus {
 
 .sidebar #sidebarToggle::after {
   font-weight: 900;
-  content: '\f104';
+  content: '<';
   font-family: 'Font Awesome 5 Free';
   margin-right: 0.1rem;
 }
@@ -10439,7 +10439,7 @@ a:focus {
 }
 
 .sidebar.toggled #sidebarToggle::after {
-  content: '\f105';
+  content: '>';
   font-family: 'Font Awesome 5 Free';
   margin-left: 0.25rem;
 }
